cmake_minimum_required(VERSION 3.15)

project("Getline")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_cin 1_cin.cpp)
add_executable(2_getline 2_getline.cpp)
add_executable(3_multiple_getlines 3_multiple_getlines.cpp)
add_executable(4_without_cin_ignore 4_without_cin_ignore.cpp)
add_executable(5_with_cin_ignore 5_with_cin_ignore.cpp)
add_executable(6_delimiter 6_delimiter.cpp)
